ATLAS-1178: revoked business objects should not count towards uniqueness of swissnumbers